--- a/index.ipynb
+++ b/index.ipynb
@@ -243,6 +243,8 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
+         "type": "scatter",
+         "uid": "f1c6d746-6079-11e9-8c19-6954dce6f903",
          "x": [
           4,
           1,
@@ -264,10 +266,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"7ced2553-80d5-423b-8431-769638f32d3f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"7ced2553-80d5-423b-8431-769638f32d3f\", [{\"x\": [4, 1, 5, 6, 3, 2], \"y\": [8, 11, 8, 13, 6, 4]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"536d1d11-ef81-4539-91e6-ebdb6b580b14\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"536d1d11-ef81-4539-91e6-ebdb6b580b14\", [{\"x\": [4, 1, 5, 6, 3, 2], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"scatter\", \"uid\": \"f1f57b46-6079-11e9-8c19-6954dce6f903\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"7ced2553-80d5-423b-8431-769638f32d3f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"7ced2553-80d5-423b-8431-769638f32d3f\", [{\"x\": [4, 1, 5, 6, 3, 2], \"y\": [8, 11, 8, 13, 6, 4]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"536d1d11-ef81-4539-91e6-ebdb6b580b14\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"536d1d11-ef81-4539-91e6-ebdb6b580b14\", [{\"x\": [4, 1, 5, 6, 3, 2], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"scatter\", \"uid\": \"f1f57b46-6079-11e9-8c19-6954dce6f903\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
